force-app/main/default/objects/Activity/fields/Weemo__call_duration__c.field-meta.xml
<CustomField>
    <fullName>Weemo__call_duration__c</fullName>
    <label>Call Duration</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>