force-app/main/default/objects/Activity/fields/Weemo__call_start_time__c.field-meta.xml
<CustomField>
    <fullName>Weemo__call_start_time__c</fullName>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>