force-app/main/default/objects/Activity/fields/Weemo__contact_wait_time__c.field-meta.xml
<CustomField>
    <fullName>Weemo__contact_wait_time__c</fullName>
    <label>Contact Wait Time</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>