force-app/main/default/objects/Activity/fields/Weemo__notification_reference__c.field-meta.xml
<CustomField>
    <fullName>Weemo__notification_reference__c</fullName>
    <label>Notification Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>