force-app/main/default/objects/Activity/fields/Weemo__reference__c.field-meta.xml
<CustomField>
    <fullName>Weemo__reference__c</fullName>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>