force-app/main/default/objects/Activity/fields/Weemo__start_date_time__c.field-meta.xml
<CustomField>
    <fullName>Weemo__start_date_time__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>