force-app/main/default/objects/Activity/fields/Weemo__total_duration__c.field-meta.xml
<CustomField>
    <fullName>Weemo__total_duration__c</fullName>
    <label>Total Duration</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>